[gd_scene load_steps=20 format=2]

[ext_resource path="res://sprites/icon_right_pressed.png" type="Texture" id=1]
[ext_resource path="res://sprites/icon_left.png" type="Texture" id=2]
[ext_resource path="res://sprites/icon_left_pressed.png" type="Texture" id=3]
[ext_resource path="res://sprites/icon_right.png" type="Texture" id=4]
[ext_resource path="res://sprites/Player_1.png" type="Texture" id=5]
[ext_resource path="res://sprites/Player_6.png" type="Texture" id=6]
[ext_resource path="res://sprites/Player_4.png" type="Texture" id=7]
[ext_resource path="res://sprites/Player_3.png" type="Texture" id=8]
[ext_resource path="res://sprites/Player_5.png" type="Texture" id=9]
[ext_resource path="res://sprites/Player_2.png" type="Texture" id=10]
[ext_resource path="res://scripts/CharacterSelectionSystem.gd" type="Script" id=11]
[ext_resource path="res://scripts/PlayersList.gd" type="Script" id=12]
[ext_resource path="res://sprites/Player_9.png" type="Texture" id=13]
[ext_resource path="res://sprites/Player_7.png" type="Texture" id=14]
[ext_resource path="res://sprites/Player_10.png" type="Texture" id=15]
[ext_resource path="res://sprites/Player_8.png" type="Texture" id=16]
[ext_resource path="res://sprites/Player_11.png" type="Texture" id=17]
[ext_resource path="res://sprites/Player_12.png" type="Texture" id=18]
[ext_resource path="res://sprites/Player_13.png" type="Texture" id=19]


[node name="CharacterSelectionSystem" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 500.0
margin_bottom = -324.0
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayersList" type="Node2D" parent="."]
position = Vector2( 12, -60 )
script = ExtResource( 12 )

[node name="Players" type="HBoxContainer" parent="PlayersList"]
margin_left = -150.0
margin_top = -100.0
margin_right = -150.0
margin_bottom = -100.0
rect_scale = Vector2( 1.5, 1.5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player1" type="Sprite" parent="PlayersList/Players"]
position = Vector2( 290, 170 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )

[node name="Player2" type="Sprite" parent="PlayersList/Players"]
position = Vector2( 690, 170 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 10 )

[node name="Player3" type="Sprite" parent="PlayersList/Players"]
position = Vector2( 1100, 170 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 8 )

[node name="Player4" type="Sprite" parent="PlayersList/Players"]
position = Vector2( 1510, 170 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 7 )

[node name="Player5" type="Sprite" parent="PlayersList/Players"]
position = Vector2( 1920, 170 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 9 )

[node name="Player6" type="Sprite" parent="PlayersList/Players"]
position = Vector2( 2330, 170 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 6 )

[node name="Player7" type="Sprite" parent="PlayersList/Players"]
position = Vector2( 2740, 170 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 14 )

[node name="Player8" type="Sprite" parent="PlayersList/Players"]
position = Vector2( 3150, 170 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 16 )

[node name="Player9" type="Sprite" parent="PlayersList/Players"]
position = Vector2( 3560, 170 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 13 )

[node name="Player10" type="Sprite" parent="PlayersList/Players"]
position = Vector2( 3970, 170 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 15 )

[node name="Player11" type="Sprite" parent="PlayersList/Players"]
position = Vector2( 4380, 170 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 17 )

[node name="Player12" type="Sprite" parent="PlayersList/Players"]
position = Vector2( 4790, 170 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 18 )

[node name="Player13" type="Sprite" parent="PlayersList/Players"]
position = Vector2( 5200, 170 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 19 )

[node name="move_tween" type="Tween" parent="PlayersList/Players"]
playback_speed = 3.0
playback/speed = 3.0

[node name="RightButton" type="TextureButton" parent="."]
margin_left = 475.0
margin_top = 50.0
margin_right = 667.0
margin_bottom = 357.0
rect_scale = Vector2( 0.3, 0.3 )
action_mode = 0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftButton" type="TextureButton" parent="."]
margin_left = 40.0
margin_top = 50.0
margin_right = 232.0
margin_bottom = 357.0
rect_scale = Vector2( 0.3, 0.3 )
action_mode = 0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="RightButton" to="." method="_on_RightButton_pressed"]
[connection signal="pressed" from="LeftButton" to="." method="_on_LeftButton_pressed"]
